[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/text/text_template.gd" type="Script" id=1]
[ext_resource path="res://scenes/objects/text_theme.tres" type="Theme" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 481 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -59 )
shape = SubResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -1325.0
margin_top = -835.0
margin_right = 1593.0
margin_bottom = 1165.0
mouse_filter = 2
color = Color( 0.286275, 0.25098, 0.25098, 0.682353 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -612.0
margin_top = -543.0
margin_right = 618.0
margin_bottom = 424.0
color = Color( 0.960784, 0.941176, 0.482353, 1 )

[node name="ButtonRight" type="Button" parent="ColorRect"]
margin_left = 1030.0
margin_top = 877.0
margin_right = 1230.0
margin_bottom = 967.0
theme = ExtResource( 2 )
text = "RIGHT"

[node name="ButtonLeft" type="Button" parent="ColorRect"]
margin_top = 877.0
margin_right = 200.0
margin_bottom = 967.0
theme = ExtResource( 2 )
text = "LEFT"

[node name="Content" type="RichTextLabel" parent="ColorRect"]
margin_left = 117.0
margin_top = 83.0
margin_right = 1102.0
margin_bottom = 710.0
theme = ExtResource( 2 )
text = "TEST TEXT"

[node name="Page Count" type="RichTextLabel" parent="ColorRect"]
margin_left = 536.0
margin_top = 876.0
margin_right = 692.0
margin_bottom = 949.0
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]1/1[/center]"
text = "1/1"
scroll_active = false

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="pressed" from="ColorRect/ButtonRight" to="." method="_on_ButtonRight_pressed"]
[connection signal="pressed" from="ColorRect/ButtonLeft" to="." method="_on_ButtonLeft_pressed"]
